--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-grid-system": "^4.1.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
