--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "google-maps-react": "^2.0.2",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
     "react-grid-system": "^4.1.2",
     "react-router-dom": "^4.3.1",
